# Reaction-Diffusion-Research-Project

./: .gitlab-ci.yml  README.md  constants.py  db.py  image_processing.py  interval.py  kernel_helpers.py  main.py  multispecies_interactions.py  pyproject.toml  singlespecies_interactions.py  test_qt.py  widgets.py
.github/workflows/: main.yml
images/: info.csv  info.db  multispecies.db
images/28/: info.txt
kt_rd/: constants.py  db.py  image_processing.py  interval.py  kernel_helpers.py  multispecies_interactions.py  singlespecies_interactions.py  widgets.py
logging_configs/: config.json
