[tool.poetry]
name = "reaction_diffusion_new"
version = "0.1.0"
description = ""
authors = ["Erik Biederstadt <biederstadterik@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9-3.11"
numpy = "^1.21.4"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]
scipy = "^1.7.3"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
