[tool.poetry]
name = "reaction_diffusion_new"
version = "0.1.0"
description = ""
authors = ["Erik Biederstadt <biederstadterik@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
numpy = ">=1.17,<1.21"
matplotlib = "^3.5.0"
scipy = "^1.7.3"
numba = "^0.54.1"
PyQt5 = "^5.15.6"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
skip_gitignore = "true"
line_length = "88"
