[project]
name = "reaction-diffusion"
version = "0.1.0"
description = "Simulating spatial vegetation patterning with kernel based reaction diffusion dynamics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "numba>=0.60.0",
    "numpy>=2.0.2",
    "pyqt5>=5.15.11",
    "scipy>=1.15.0",
]
